政府採購法 2002.1.16

--- a/行政-預算及主計/政府採購法.md
+++ b/行政-預算及主計/政府採購法.md
@@ -18,9 +18,9 @@
 
 > 釋：一、工程、財物及勞務之採購除由政府機關自行辦理外，亦有委託法人或團體辦理之需要，爰於第一項明定之。二、受機關委託辦理採購之法人或團體，因其仍係執行政府之預算，故仍應受本法之規範，並受委託機關之監督，以杜流弊，爰於第二項明定之。
 
-* 6 機關辦理採購，對廠商不得為無正當理由之差別待遇。機關訂定採購契約應以維護公共利益及公平合理為原則。辦理採購人員於不違反本法規定之範圍內，得基於公共利益、採購效益或專業判斷之考量，為適當之採購決定。
+* 6 機關辦理採購，應以維護公共利益及公平合理為原則，對廠商不得為無正當理由之差別待遇。辦理採購人員於不違反本法規定之範圍內，得基於公共利益、採購效益或專業判斷之考量，為適當之採購決定。司法、監察或其他機關對於採購機關或人員之調查、起訴、審判、彈劾或糾舉等，得洽請主管機關協助、鑑定或提供專業意見。
 
-> 釋：一、本條揭示辦理採購應遵循之原則。二、維護公平交易秩序為政府一貫之政策，政府採購行為尤不得對廠商有不合理之差別待遇，爰於第一項明定各機關辦理採購，對待廠商之無差別待遇原則。三、維護公共利益及公平合理為民事契約之基本內涵，於政府採購尤應加以重視，爰於第二項明定契約之訂定應以維護公共利益及公平合理為原則。四、協商有助於爭議之解決，並可消弭爭議於無形，若透過有效之協商，往往即可解決較為單純之爭議事項，避免訴訟處理程序之複雜及延誤時效，爰於第三項明定各機關對於爭議應本誠信原則與廠商進行協商。五、第四項明定對辦理採購人員，於不違反本法規定之情況下，得基於公共利益、採購效益或專業判斷，為適當之決定，以鼓勵公務員本於職權勇於任事，不畏懼對採購案做出決定。
+> 釋：一、原條文第一項及第二項合併為第一項，並刪除原條文第二項原列「訂定採購契約」之條件，以擴大適用範圍至準備招標文件、處理廠商異議申訴、處理履約爭議等事項。二、原條文第三項移列第二項。三、增訂第三項，以促使辦理採購人員積極任事，為適當之採購決定。
 
 * 7 本法所稱工程，指在地面上下新建、增建、改建、修建、拆除構造物與其所屬設備及改變自然環境之行為，包括建築、土木、水利、環境、交通、機械、電氣、化工及其他經主管機關認定之工程。本法所稱財物，指各種物品（生鮮農漁產品除外）、材料、設備、機具與其他動產、不動產、權利及其他經主管機關認定之財物。本法所稱勞務，指專業服務、技術服務、資訊服務、研究發展、營運管理、維修、訓練、勞力及其他經主管機關認定之勞務。採購兼有工程、財物、勞務二種以上性質，難以認定其歸屬者，按其性質所占預算金額比率最高者歸屬之。
 
@@ -38,17 +38,17 @@
 
 > 釋：一、明定主管機關掌理之事項。二、按未來我國政府採購制度之設計，將從現行之事前審計改為事後審計，現行採購屬於事前審計之監督功能，將由行政體系中之上級機關及主管機關擔任；另為使政府採購能公開化、透明化，有關採購資訊之蒐集、公告需專責機關辦理，並將設置異議及申訴制度，故主管機關掌理採購政策之研訂、採購法令之修訂、中央機關採購申訴之處理、採購資訊之蒐集、公告及人員之訓練等有助於健全政府採購體制運作之業務。
 
-* 11 主管機關得設立採購資訊中心，統一蒐集共通性商情及同等品分類之資訊，並建立工程材料、設備之價格資料庫，以供各機關採購預算編列及底價訂定之參考。除應秘密之部分外，得有償或無償提供廠商。主管機關得設採購人員訓練所，統一培訓專業採購人員。
+* 11 主管機關應設立採購資訊中心，統一蒐集共通性商情及同等品分類之資訊，並建立工程材料、設備之價格資料庫，以供各機關採購預算編列及底價訂定之參考。除應秘密之部分外，應無償提供廠商。主管機關得設採購人員訓練所，統一培訓專業採購人員。
 
-> 釋：一、明定主管機關應設立採購資訊中心。二、為使採購市場資訊透明化、公開化，採購資訊中心應負責建立各種資料庫供各機關及廠商參考，以減少過去因資訊不足而衍生之弊端。三、設立採購人員訓練所，以增進各機關採購執行之效能。
+> 釋：將第一項前段之「得」字，改為「應」。在於公共工程委員會屬主管機關，本應蒐集、統籌所有政府採購資訊，提供各界參考。另將後段修正成政府採購資訊必須無償提供與廠商。如此方能吸引眾多廠商參予競標，進而讓政府單位有更多選擇，並提升我國政府採購之品質。
 
 * 12 機關辦理查核金額以上採購之開標、比價、議價、決標及驗收時，應於規定期限內，檢送相關文件報請上級機關派員監辦；上級機關得視事實需要訂定授權條件，由機關自行辦理。機關辦理未達查核金額之採購，其決標金額達查核金額者，或契約變更後其金額達查核金額者，機關應補具相關文件送上級機關備查。查核金額由主管機關定之。
 
 > 釋：一、本條係參照稽察條例第五條、第八條、第九條之規定，明定各機關辦理查核金額以上之採購，應由其上級機關監辦及其他應報上級機關備查之情形。但查核金額之額度，將與現行稽察條例之一定金額有別。二、有關查核金額，因須審酌社會經濟情況訂定，爰於第三項明定由主管機關定之。未來主管機關訂定之查核金額，除與稽察條例之一定金額有別外，亦將比第九條之公告金額為高。查核金額之計算方式，由主管機關於訂定該金額時一併敘明。
 
-* 13 機關辦理公告金額以上採購之開標、比價、議價、決標及驗收，應由其主（會）計及有關單位會同監辦。未達公告金額採購之監辦，依其屬中央或地方，由主管機關、直轄市或縣（市）政府另定之。未另定者，比照前項規定辦理。公告金額應低於查核金額，由主管機關參酌國際標準定之。
+* 13 機關辦理公告金額以上採購之開標、比價、議價、決標及驗收，除有特殊情形者外，應由其主（會）計及有關單位會同監辦。未達公告金額採購之監辦，依其屬中央或地方，由主管機關、直轄市或縣（市）政府另定之。未另定者，比照前項規定辦理。公告金額應低於查核金額，由主管機關參酌國際標準定之。第一項會同監辦採購辦法，由主管機關會同行政院主計處定之。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、第一項增列除外情形。二、增訂第四項。基於實務執行需要，主管機關已於本法施行前會同行政院主計處訂頒機關主（會）計單位會同監辦採購辦法，爰配合行政程序法第一百五十條規定，授權主管機關會同行政院主計處訂定會同監辦採購辦法，以利遵循。
 
 * 14 機關不得意圖規避本法之適用，分批辦理公告金額以上之採購。其有分批辦理之必要，並經上級機關核准者，應依其總金額核計採購金額，分別按公告金額或查核金額以上之規定辦理。
 
@@ -74,29 +74,29 @@
 
 > 釋：明定公告金額以上之採購除符合選擇性招標及限制性招標條件外，應公開招標。
 
-* 20 機關辦理公告金額以上之採購，符合下列情形之一，報經上級機關核准者，得採選擇性招標：一、經常性採購。二、投標文件審查，須費時長久始能完成者。三、廠商準備投標需高額費用者。四、廠商資格條件複雜者。
+* 20 機關辦理公告金額以上之採購，符合下列情形之一者，得採選擇性招標：一、經常性採購。二、投標文件審查，須費時長久始能完成者。三、廠商準備投標需高額費用者。四、廠商資格條件複雜者。五、研究發展事項。
 
-> 釋：為提升採購效率，省卻重複性之資格審查作業，降低廠商備標費用，爰對於經常性採購、投標文件審查須費時甚久、廠商須準備高額費用或廠商資格條件複雜之公告金額以上之採購，明定機關得於報經上級機關核准後採選擇性招標辦理，亦即各機關得依公告方式預先辦理廠商資格審查，再邀請廠商參與投標。
+> 釋：一、採選擇性招標仍須經公告程序，爰刪除須報經上級機關核准之條件，可增進採購效率，無礙廠商參與競爭，且符合政府法規鬆綁原則。二、增訂第五款，研究發展事項得採選擇性招標，以利執行。
 
 * 21 機關為辦理選擇性招標，得預先辦理資格審查，建立合格廠商名單。但仍應隨時接受廠商資格審查之請求，並定期檢討修正合格廠商名單。未列入合格廠商名單之廠商請求參加特定招標時，機關於不妨礙招標作業，並能適時完成其資格審查者，於審查合格後，邀其投標。經常性採購，應建立六家以上之合格廠商名單。機關辦理選擇性招標，應予經資格審查合格之廠商平等受邀之機會。
 
 > 釋：照黨團協商條文通過。
 
-* 22 機關辦理公告金額以上之採購，符合下列情形之一，報經上級機關核准，得採限制性招標：一、以公開招標或選擇性招標辦理結果，無廠商投標或無合格標，但以原定招標內容及條件未經重大改變者為限。二、屬專屬權利、獨家製造或供應、藝術品、秘密諮詢，無其他合適之替代標的者。三、遇有不可預見之緊急事故，致無法以公開或選擇性招標程序適時辦理，且確有必要者。四、原有採購之後續維修、零配件供應、更換或擴充，因相容或互通性之需要，必須向原供應廠商採購者。五、屬原型或首次製造、供應之標的，以研究發展、實驗或開發性質辦理者。六、在原招標目的範圍內，因未能預見之情形，必須追加契約以外之工程，如另行招標，確有產生重大不便及技術或經濟上困難之虞，非洽原訂約廠商辦理，不能達契約之目的，且未逾原主契約金額百分之五十者。七、原有採購之後續擴充，且已於原招標公告及招標文件敘明者。八、在集中交易或公開競價市場採購財物。九、委託專業服務、技術服務或資訊服務，經公開客觀評選為優勝者。十、以公告程序辦理設計競賽，經公開客觀評選為優勝者。十一、公營事業機構因營業需要，必須指定地區採購房地產，經依所需條件公開徵求勘選認定適合需要者。十二、購買殘障、原住民、慈善機構或受刑人所提供之非營利產品或勞務。十三、其他經主管機關認定者。前項第九款及第十款之廠商評選辦法與服務費用計算方式及第十一款之作業辦法，由主管機關定之。
+* 22 機關辦理公告金額以上之採購，符合下列情形之一者，得採限制性招標：一、以公開招標、選擇性招標或依第九款至第十一款公告程序辦理結果，無廠商投標或無合格標，且以原定招標內容及條件未經重大改變者。二、屬專屬權利、獨家製造或供應、藝術品、秘密諮詢，無其他合適之替代標的者。三、遇有不可預見之緊急事故，致無法以公開或選擇性招標程序適時辦理，且確有必要者。四、原有採購之後續維修、零配件供應、更換或擴充，因相容或互通性之需要，必須向原供應廠商採購者。五、屬原型或首次製造、供應之標的，以研究發展、實驗或開發性質辦理者。六、在原招標目的範圍內，因未能預見之情形，必須追加契約以外之工程，如另行招標，確有產生重大不便及技術或經濟上困難之虞，非洽原訂約廠商辦理，不能達契約之目的，且未逾原主契約金額百分之五十者。七、原有採購之後續擴充，且已於原招標公告及招標文件敘明擴充之期間、金額或數量者。八、在集中交易或公開競價市場採購財物。九、委託專業服務、技術服務或資訊服務，經公開客觀評選為優勝者。十、辦理設計競賽，經公開客觀評選為優勝者。十一、因業務需要，指定地區採購房地產，經依所需條件公開徵求勘選認定適合需要者。十二、購買身心障礙者、原住民或受刑人個人、身心障礙福利機構、政府立案之原住民團體、監獄工場、慈善機構所提供之非營利產品或勞務。十三、委託在專業領域具領先地位之自然人或經公告審查優勝之學術或非營利機構進行科技、技術引進、行政或學術研究發展。十四、邀請或委託具專業素養、特質或經公告審查優勝之文化、藝術專業人士、機構或團體表演或參與文藝活動。十五、公營事業為商業性轉售或用於製造產品、提供服務以供轉售目的所為之採購，基於轉售對象、製程或供應源之特性或實際需要，不適宜以公開招標或選擇性招標方式辦理者。十六、其他經主管機關認定者。前項第九款及第十款之廠商評選辦法與服務費用計算方式與第十一款、第十三款及第十四款之作業辦法，由主管機關定之。第一項第十三款及第十四款，不適用工程採購。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、第一項所定須報經上級機關核准之條件，其執行結果有值得檢討之處，包括上級機關延遲其決定、公文往返延宕採購時效、核准流於形式等情形，故刪除須報經上級機關核准之條件，可增進採購效率，權責分明，且符合政府法規鬆綁原則。由於其決標結果仍須依本法第六十一條規定公告，尚不致於造成各機關濫用之情形。二、第一項第一款增列依同項第九款至第十一款以公告程序辦理評選或勘選之情形，並做文字修正。三、第一項第七款增列適用條件，以利執行。四、第一項第十款刪除「以公告程序」等字，以符合第十八條第四項之規定。五、第一項第十一款刪除「公營事業機構」，並作文字修正，以擴大適用範圍至機關採購房地產之情形。六、第一項第十二款，配合身心障礙者保護法之用詞更改「殘障」乙詞；增訂得為採購對象之個人、機構或團體，以資明確。七、增訂第一項第十三款，以利委託自然人、學術或非營利機構進行科技、技術引進、行政或學術研究發展。八、增訂第一項第十四款，以利辦理文化、藝術採購。九、增訂第一項第十五款，以利辦理非自用而屬轉售性質之採購。十、第一項第十三款移列為第十六款。十一、第二項增訂第一項第十三款及第十四款之作業辦法由主管機關定之。十二、增列第三項。
 
 * 23 未達公告金額之招標方式，在中央由主管機關定之；在地方由直轄市或縣（市）政府定之。地方未定者，比照中央規定辦理。
 
 > 釋：照黨團協商條文通過。
 
-* 24 機關基於效率及品質之要求，得以統包辦理招標。其屬查核金額以上者，應報請上級機關核准後辦理。前項所稱統包，指將工程或財物採購中之設計、施工、供應、安裝或一定期間之維修等併於同一採購契約辦理招標。統包實施辦法，由主管機關定之。
+* 24 機關基於效率及品質之要求，得以統包辦理招標。前項所稱統包，指將工程或財物採購中之設計與施工、供應、安裝或一定期間之維修等併於同一採購契約辦理招標。統包實施辦法，由主管機關定之。
 
-> 釋：一、明定各機關基於工程或財物採購之特性得辦理統包。二、統包是國際上經常採用之發包方式，其內涵為從方案選擇、規劃設計、材料購置、施工管理、設備安裝等作業，均交由同一業者負責統籌執行，於驗收合格後，再移交業主使用。其優點包括減少管理之介面及人力、責任界定清楚、縮短工期、降低工程成本、提升廠商技術能力、激勵新工法及新材料之引進或研發等。三、「統包」是解決傳統工程模式執行缺失之良方，值得政府採行；惟因相關法令未臻完備，除現行「行政院暨所屬各機關營繕工程招標注意事項」（以下簡稱招標注意事項）第十二點之規定外，並無明確之執行法源依據，使其適用受到相當之限制，爰予明確規定，俾供各機關遵循。
+> 釋：一、第一項刪除後段查核金額以上應報經上級機關核准之規定，以提升採購效率。二、統包之工程或財物採購均包含設計，故第二項作文字修正，以資明確。
 
-* 25 機關得視個別採購之特性，於招標文件中規定允許一定家數內之廠商共同投標。其屬查核金額以上者，應報經上級機關核准後辦理。前項所稱共同投標，指二家以上之廠商共同具名投標，並於得標後共同具名簽約，連帶負履行採購契約之責，以承攬工程或提供財物、勞務之行為。共同投標以能增加廠商之競爭或無不當限制競爭者為限。同業共同投標應符合公平交易法第十四條但書各款之規定。共同投標廠商應於投標時檢附共同投標協議書。共同投標辦法，由主管機關定之。
+* 25 機關得視個別採購之特性，於招標文件中規定允許一定家數內之廠商共同投標。前項所稱共同投標，指二家以上之廠商共同具名投標，並於得標後共同具名簽約，連帶負履行採購契約之責，以承攬工程或提供財物、勞務之行為。共同投標以能增加廠商之競爭或無不當限制競爭者為限。同業共同投標應符合公平交易法第十四條但書各款之規定。共同投標廠商應於投標時檢附共同投標協議書。共同投標辦法，由主管機關定之。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、第一項刪除後段查核金額以上應報經上級機關核准之規定，以提升採購效率。
 
 * 26 機關辦理公告金額以上之採購，應依功能或效益訂定招標文件。其有國際標準或國家標準者，應從其規定。機關所擬定、採用或適用之技術規格，其所標示之擬採購產品或服務之特性，諸如品質、性能、安全、尺寸、符號、術語、包裝、標誌及標示或生產程序、方法及評估之程序，在目的及效果上均不得限制競爭。招標文件不得要求或提及特定之商標或商名、專利、設計或型式、特定來源地、生產者或供應者。但無法以精確之方式說明招標要求，而已在招標文件內註明諸如「或同等品」字樣者，不在此限。
 
@@ -106,17 +106,17 @@
 
 > 釋：一、為使採購公開化、透明化，爰參考先進國家之做法及「政府採購協定」第六條之規定，於第一項明定各機關辦理公開招標或選擇性招標均應刊登政府採購公報，以便彙整招標資訊，方便廠商取得全國各機關之採購資訊，達到促進競爭之目的。二、第二項明定政府採購公報發行辦法，由主管機關定之。公報已依行政院核定之「推動政府機關招標資訊公告暫行辦理要點」規定發行，各機關利用公報刊登公告，不需支付廣告費。三、為使採購業務儘量公開化、透明化，第三項特授權各機關得將採購之預算數額，於招標公告中一併公開，使廠商得以詳細估算其合理標價，避免漫天叫價式購買地攤貨或低價搶標心理，使訂約雙方能於確保採購品質與獲取合理利潤之公平交易下，互蒙其利。
 
-* 28 機關辦理公開招標或選擇性招標，其自公告日或邀標日起至截止投標日止之等標期，應訂定十四日以上之合理期限，並於等標期內持續於機關門首公告。前項等標期及辦理選擇性招標自公告日至預先辦理資格審查截止收件日之期限，由主管機關定之。
+* 28 機關辦理招標，其自公告日或邀標日起至截止投標或收件日止之等標期，應訂定合理期限。其期限標準，由主管機關定之。
 
-> 釋：一、配合「政府採購協定」第十一條之規定，第一項明定各機關招標應訂定適當之等標期，給予廠商合理之備標期間，俾增作業之周延，避免機關藉過短之等標期，遂行綁標之實。二、公開招標自公告日至截止投標日之等標期；選擇性招標自邀標日至截止投標日之等標期以及自公告日至預先辦理資格審查截止收件日，均應訂定適當之最短期限，爰於第二項明定由主管機關另定之。
+> 釋：一、第一項有關等標期規定，擴大其適用範圍，不限於公開招標或選擇性招標，其他如限制性招標、公開取得書面報價或企劃書亦一併適用，以資周全。原列十四日以上之期限規定，考量各種不同案件之性質，宜予主管機關彈性規定之空間，故予刪除，以利執行。至於機關門首公告，作用極為有限，且鑒於電子招標資訊及政府採購公報已廣為廠商及機關使用，爰予刪除。本項修正後列為本條文。二、第二項授權主管機關訂定期限標準之規定移併本條文後段。
 
 * 29 公開招標之招標文件及選擇性招標之預先辦理資格審查文件，應自公告日起至截止投標日或收件日止，公開發給、發售及郵遞方式辦理。發給、發售或郵遞時，不得登記領標廠商之名稱。選擇性招標之文件應公開載明限制投標廠商資格之理由及其必要性。第一項文件內容，應包括投標廠商提交投標書所需之一切必要資料。
 
 > 釋：照黨團協商條文通過。
 
-* 30 機關辦理招標，應於招標文件中規定投標廠商須繳納押標金；得標廠商須繳納保證金或提供或併提供其他擔保。但有下列情形之一者，不在此限：一、勞務採購，得免收押標金或保證金。二、未達公告金額十分之一之工程、財物採購，得免收押標金、保證金。三、以議價方式辦理之採購，得免收押標金。押標金及保證金應由廠商以現金、銀行本行本票或支票、保付支票、無記名政府公債、設定質權之銀行定期存款單、銀行開發或保兌之不可撤銷擔保信用狀繳納，或取具銀行之書面連帶保證、保險公司之連帶保證保險單為之。押標金、保證金及其他擔保之種類、額度及繳納、退還、終止方式，由主管機關定之。
+* 30 機關辦理招標，應於招標文件中規定投標廠商須繳納押標金；得標廠商須繳納保證金或提供或併提供其他擔保。但有下列情形之一者，不在此限：一、勞務採購，得免收押標金、保證金。二、未達公告金額之工程、財物採購，得免收押標金、保證金。三、以議價方式辦理之採購，得免收押標金。四、依市場交易慣例或採購案特性，無收取押標金、保證金之必要或可能者。押標金及保證金應由廠商以現金、金融機構簽發之本票或支票、保付支票、郵政匯票、無記名政府公債、設定質權之金融機構定期存款單、銀行開發或保兌之不可撤銷擔保信用狀繳納，或取具銀行之書面連帶保證、保險公司之連帶保證保險單為之。押標金、保證金及其他擔保之種類、額度及繳納、退還、終止方式，由主管機關定之。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、修正第一項第一款，將「或」改為「、」，以與第二款之體例一致。二、修正第一項第二款，刪除「十分之一」之限制，以利多數未達公告金額案件得免除繳納及收退押標金、保證金之繁複作業。三、增訂第一項第四款，以配合實際需要。四、第二項將本票、支票、定期存單簽發機構由「銀行」擴大為「金融機構」；並增列郵政匯票，以利廠商繳納。另配合「銀行」修正為「金融機構」，刪除「本行」乙詞。
 
 * 31 機關對於廠商所繳納之押標金，應於決標後無息發還未得標之廠商。廢標時，亦同。機關得於招標文件中規定，廠商有下列情形之一者，其所繳納之押標金，不予發還，其已發還者，並予追繳：一、以偽造、變造之文件投標。二、投標廠商另行借用他人名義或證件投標。三、冒用他人名義或證件投標。四、在報價有效期間內撤回其報價。五、開標後應得標者不接受決標或拒不簽約。六、得標後未於規定期限內，繳足保證金或提供擔保。七、押標金轉換為保證金。八、其他經主管機關認定有影響採購公正之違反法令行為者。
 
@@ -130,21 +130,21 @@
 
 > 釋：一、第一項明定投標文件之一般遞送之方式。二、第二項係參考「政府採購協定」第十三條投標方法及第二十四條研議以資訊科技便利投標之未來方向，明定得以電子資料傳輸辦理投標之方式，但以招標文件已預先訂明者為限。三、投標文件可否於開標前補正，如未規定易滋爭議，爰於第三項明定處理原則，其細節於施行細則中另行規定。
 
-* 34 機關辦理採購，其招標文件於公告前應予保密。但須公開說明或藉以公開徵求廠商提供參考資料者，不在此限。機關辦理招標，不得於開標前洩漏底價，領標、投標廠商之名稱與家數及其他足以造成限制競爭或不公平競爭之相關資料。底價於開標後至決標前，仍應保密，決標後除有特殊情形外，應予公開。但機關依實際需要，經上級機關同意，得於招標文件中公告底價。機關對於廠商投標文件，除供公務上使用或法令另有規定外，應保守秘密。
+* 34 機關辦理採購，其招標文件於公告前應予保密。但須公開說明或藉以公開徵求廠商提供參考資料者，不在此限。機關辦理招標，不得於開標前洩漏底價，領標、投標廠商之名稱與家數及其他足以造成限制競爭或不公平競爭之相關資料。底價於開標後至決標前，仍應保密，決標後除有特殊情形外，應予公開。但機關依實際需要，得於招標文件中公告底價。機關對於廠商投標文件，除供公務上使用或法令另有規定外，應保守秘密。
 
-> 釋：一、行政院招標文件於公告前應予保密，以避免不公平的現象。二、為防止廠商藉先行了解底價及其他競爭者之資料，而造成不公平之現象，對底價、廠商名稱、家數等，實有保密之必要。三、開標後因審標或減標之需要，可能無法立即決標，此時，從開標至決標之期間，底價仍有保密之必要；惟基於透明之需要，底價於決標後可予公開，爰於第三項明定。四、投標文件因可能涉及商業秘密，爰於第四項中明定應予保密。
+> 釋：第三項刪除「經上級機關同意」等字，以提升採購效率，並強化招標機關權責。
 
-* 35 機關得於招標文件中規定允許廠商於決標前，在不降低原有功能條件下得就技術、工法、材料或設備，提出可縮減工期、減省經費或提高效率之替代方案。
+* 35 機關得於招標文件中規定，允許廠商在不降低原有功能條件下，得就技術、工法、材料或設備，提出可縮減工期、減省經費或提高效率之替代方案。其實施辦法，由主管機關定之。
 
-> 釋：一、為鼓勵廠商引進新技術、新產品及新工法，以提升國內技術水準，應適當允許廠商提出並使用可縮減工期、減省經費或提高效率之替代方案。此項措施在美、日等國家已廣為採用。二、第一項規定廠商得提出替代方案之時機、條件及其獎勵。三、第二項授權主管機關訂定獎勵辦法，以為各機關施行之準據。
+> 釋：刪除「於決標前」之條件，以擴大替代方案之適用範圍。又主管機關已於本法施行前訂頒替代方案實施辦法，為符合行政程序法第一百五十條規定，爰於後段增訂授權之依據。
 
 * 36 機關辦理採購，得依實際需要，規定投標廠商之基本資格。特殊或巨額之採購，須由具有相當經驗、實績、人力、財力、設備等之廠商始能擔任者，得另規定投標廠商之特定資格。外國廠商之投標資格及應提出之資格文件，得就實際需要另行規定，附經公證或認證之中文譯本，並於招標文件中訂明。第一項基本資格、第二項特定資格與特殊或巨額採購之範圍及認定標準，由主管機關定之。
 
 > 釋：一、為確保投標廠商具備履約能力，爰參酌「稽察條例」第十三條、「審計法施行細則」第四十二條，及「招標注意事項」第六點，規定廠商資格。二、第一項規定一般採購，應依實際需要訂定投標廠商基本資格。三、第二項規定特殊或鉅大採購其投標廠商特定資格之訂定。四、第三項說明外國廠商之投標資格及應提出之資格文件，得就事實需要另予規定，並於招標文件中訂明，以應外國廠商不能與國內廠商提出同樣之我國證明文件時之需要。五、第四項明定基本資格、特定資格及特殊或鉅大採購之範圍、認定標準，由主管機關定之。
 
-* 37 機關訂定前條投標廠商之資格，不得不當限制競爭，並以確認廠商具備履行契約所必須之能力者為限。投標廠商未符合前條所定資格者，其投標不予受理。但廠商得以銀行或保險公司之履約及賠償連帶保證責任、連帶保證保險單代之。
+* 37 機關訂定前條投標廠商之資格，不得不當限制競爭，並以確認廠商具備履行契約所必須之能力者為限。投標廠商未符合前條所定資格者，其投標不予受理。但廠商之財力資格，得以銀行或保險公司之履約及賠償連帶保證責任、連帶保證保險單代之。
 
-> 釋：照黨團協商條文通過。
+> 釋：為降低廠商影響程度並兼顧銀行或保險公司連帶保證之性質，修正為僅得以銀行或保險公司之連帶保證代替廠商之財力資格。本項連帶保證由「銀行」出具，係考量此項連帶保證金額遠高於一般保證金之金額。
 
 * 38 政黨及與其具關係企業關係之廠商，不得參與投標。前項具關係企業關係之廠商，準用公司法有關關係企業之規定。
 
@@ -154,9 +154,9 @@
 
 > 釋：一、一般行政機關及學校、公立醫院等，因缺乏採購專業人才，爰於第一項明定得將其對規劃、設計等業務之管理，以專案管理之方式委託廠商代辦。二、第二項及第三項明定廠商代機關辦理專案管理時，其與負責規劃、設計及施工或供應之廠商間，彼此不能具有特定關係，以免產生利益輸送、相互掩護、球員兼裁判之情形。三、公司負責人，依公司法第八條規定，包括董事、監察人及經理人。關係企業之意義，公司法修正草案第六章之一已有專章規定。
 
-* 40 機關之採購，得洽由其他具有專業能力之機關代辦。
+* 40 機關之採購，得洽由其他具有專業能力之機關代辦。上級機關對於未具有專業採購能力之機關，得命其洽由其他具有專業能力之機關代辦採購。
 
-> 釋：明定無專職採購人員之機關辦理採購時，得委由具專業能力之機關代辦。
+> 釋：增訂第二項，以作為未具有專業採購能力之機關洽由其他機關代辦採購之依據。
 
 * 41 廠商對招標文件內容有疑義者，應於招標文件規定之日期前，以書面向招標機關請求釋疑。機關對前項疑義之處理結果，應於招標文件規定之日期前，以書面答復請求釋疑之廠商，必要時得公告之；其涉及變更或補充招標文件內容者，除選擇性招標之規格標與價格標及限制性招標得以書面通知各廠商外，應另行公告，並視需要延長等標期。機關自行變更或補充招標文件內容者，亦同。
 
@@ -186,17 +186,17 @@
 
 > 釋：一、機關辦理採購因範圍廣泛，內容複雜，有因無前例可循或同時有多種不同規格或性能之工法產品可參與競標，致無法訂出客觀正確之底價者；有依其性質，不須訂定底價者，亦有因金額過小，無訂定底價之必要者。如硬性規定各機關所有採購都必須訂定底價，除流於僵化外，以該不盡合理之底價作為評估廠商標價及減價之依據，亦有不妥。爰於第一項明定在特別情況下宜允許各機關免訂底價之彈性處理原則。二、第二項明定小額採購金額之訂定及其限額。
 
-* 48 機關依本法規定辦理招標，除有下列情形之一不予開標決標外，有三家以上合格廠商投標，即應依招標文件所定時間開標決標：一、變更或補充招標文件內容者。二、發現有足以影響採購公正之違法或不當行為者。三、依第八十二條規定暫緩開標者。四、依第八十四條規定暫停採購程序者。五、依第八十五條規定由招標機關另為適法之處置者。六、因應突發事故者。七、採購計畫變更或取銷採購者。八、經主管機關認定之特殊情形。第一次開標，因未滿三家而流標者，第二次招標之等標期間得縮短至二分之一，但不得少於十日，並得不受前項三家廠商之限制。查核金額以上之採購，應先報經上級機關核准。
+* 48 機關依本法規定辦理招標，除有下列情形之一不予開標決標外，有三家以上合格廠商投標，即應依招標文件所定時間開標決標：一、變更或補充招標文件內容者。二、發現有足以影響採購公正之違法或不當行為者。三、依第八十二條規定暫緩開標者。四、依第八十四條規定暫停採購程序者。五、依第八十五條規定由招標機關另為適法之處置者。六、因應突發事故者。七、採購計畫變更或取銷採購者。八、經主管機關認定之特殊情形。第一次開標，因未滿三家而流標者，第二次招標之等標期間得予縮短，並得不受前項三家廠商之限制。
 
-> 釋：本法採購制度已依公開化、透明化、制度化設計，且有異議申訴制度供廠商利用，爰明定各機關依本法規定程序辦理招標，除特殊情形外，有廠商投標即應開標，以免採購延宕不決。現行以三家廠商投標方得開標之作法，造成廠商借牌圍標或虛設行號一同投標，以便湊足三家投標。機關則常因投標廠商家數為達三家，而一再流標延期開標，延宕採購時效。已參加投標之廠商則一再往返投標，卻未能開標，甚至因流標而曝光，損害其權益。基於此等現象宜予改革，且先進國家亦少有以投標廠商家數限制開標之做法，爰予明定。
+> 釋：第二項刪除後段查核金額以上之採購應報經上級機關核准之規定，以提升採購效率。另第二次招標之等標期配合本法第二十八條之修正酌作修正。
 
 * 49 未達公告金額之採購，其金額逾公告金額十分之一者，除第二十二條第一項各款情形外，仍應公開取得三家以上廠商之書面報價或企劃書。
 
 > 釋：照黨團協商條文通過。
 
-* 50 投標廠商有下列情形之一，經機關於開標前發現者，其所投之標應不予開標；於開標後發現者，應不決標予該廠商。一、未依招標文件之規定投標。二、投標文件內容不符合招標文件之規定。三、借用或冒用他人名義或證件，或以偽造、變造之文件投標。四、偽造或變造投標文件。五、影響採購公正之違反法令行為。六、第一百零三條第一項不得參加投標或作為決標對象之情形。決標或簽約後發現得標廠商於決標前有前項情形者，應撤銷決標、終止契約或解除契約，並得追償損失。但撤銷決標、終止契約或解除契約反不符公共利益，並經上級機關核准者，不在此限。第一項不予開標或不予決標，致採購程序無法繼續進行者，機關得宣布廢標。
+* 50 投標廠商有下列情形之一，經機關於開標前發現者，其所投之標應不予開標；於開標後發現者，應不決標予該廠商：一、未依招標文件之規定投標。二、投標文件內容不符合招標文件之規定。三、借用或冒用他人名義或證件，或以偽造、變造之文件投標。四、偽造或變造投標文件。五、不同投標廠商間之投標文件內容有重大異常關聯者。六、第一百零三條第一項不得參加投標或作為決標對象之情形。七、其他影響採購公正之違反法令行為。決標或簽約後發現得標廠商於決標前有前項情形者，應撤銷決標、終止契約或解除契約，並得追償損失。但撤銷決標、終止契約或解除契約反不符公共利益，並經上級機關核准者，不在此限。第一項不予開標或不予決標，致採購程序無法繼續進行者，機關得宣布廢標。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、第一項增訂第五款，以防止假性競爭行為。其有重大異常關聯內容於本法施行細則另為規定。二、第一項第五款移列第七款，並增列「其他」二字。
 
 * 51 機關應依招標文件規定之條件，審查廠商投標文件，對其內容有疑義時，得通知投標廠商提出說明。前項審查結果應通知投標廠商，對不合格之廠商，並應敘明其原因。
 
@@ -258,9 +258,9 @@
 
 > 釋：一、工程、勞務採購，為避免廠商變相之借牌，應禁止得標廠商轉包，爰於第一項明定不得轉包；至於分包則應依契約規定辦理。二、第二項規定辦理分包時應依循之程序，及仍應由原訂約廠商赴履約責任。三、第三項為轉包及分包之定義。四、非現貨供應之財物契約，亦可能發生轉包、分包，故於第四項訂定準用規定。
 
-* 66 得標廠商違反前條第一項規定，將工程轉包其他廠商時，機關得解除契約、終止契約或沒收保證金，並得要求損害賠償。前項轉包廠商與得標廠商對機關負連帶履行及賠償責任。再轉包者，亦同。
+* 66 得標廠商違反前條規定轉包其他廠商時，機關得解除契約、終止契約或沒收保證金，並得要求損害賠償。前項轉包廠商與得標廠商對機關負連帶履行及賠償責任。再轉包者，亦同。
 
-> 釋：照黨團協商條文通過。
+> 釋：第一項修正適用範圍，將財物及勞務案件納入，不以前條「第一項」及「工程」案件為限。
 
 * 67 得標廠商得將採購分包予其他廠商。稱分包者，謂非轉包而將契約之部分由其他廠商代為履行。分包契約報備於採購機關，並經得標廠商就分包部分設定權利質權予分包廠商者，民法第五百十三條之抵押權及第八百十六條因添附而生之請求權，及於得標廠商對於機關之價金或報酬請求權。前項情形，分包廠商就其分包部分，與得標廠商連帶負瑕疵擔保責任。
 
@@ -270,13 +270,13 @@
 
 > 釋：照黨團協商條文通過。
 
-* 69 機關與廠商因履約爭議未能達成協議者，得向採購申訴審議委員會申請調解；其屬廠商申請者，機關不得拒絕。採購申訴審議委員會辦理前項調解之程序及其效力，準用民事訴訟法有關調解之規定。
+* 69 （刪除）
 
-> 釋：明定對於履約爭議，經協商未能達成協議者，除得視其實際需要依法律規定或契約約定提起訴訟或提付仲裁外，並得向上級機關申請調處。本條規定上級機關調處之途徑，可供契約當事人雙方利用，以減少爭訟，加速解決履約爭議，其程序則於施行細則中規定。
+> 釋：本條之調解與第六章之異議申訴，同為本法之爭議解決機制，移列於第八十五條之一，爰予刪除。
 
-* 70 機關辦理工程採購，應明訂廠商執行品質管理、環境保護、施工安全衛生之責任，並對重點項目訂定檢查程序及檢驗標準。機關於廠商履約過程，得辦理分段查驗，其結果並得供驗收之用。財物或勞務採購需經一定履約過程，而非以現成財物或勞務供應者，準用前二項之規定。
+* 70 機關辦理工程採購，應明訂廠商執行品質管理、環境保護、施工安全衛生之責任，並對重點項目訂定檢查程序及檢驗標準。機關於廠商履約過程，得辦理分段查驗，其結果並得供驗收之用。中央及直轄市、縣（市）政府應成立工程施工查核小組，定期查核所屬（轄）機關工程品質及進度等事宜。工程施工查核小組之組織準則，由主管機關擬訂，報請行政院核定後發布之。其作業辦法，由主管機關定之。財物或勞務採購需經一定履約過程，而非以現成財物或勞務供應者，準用第一項及第二項之規定。
 
-> 釋：一、為落實廠商品質管理工作，爰於第一項明定工程採購應執行品質管理。二、廠商履約過程，常有依進度辦理分段查驗之需要，爰於第二項明定之，並規定其結果可作為驗收之依據。三、品質管理以工程採購較有需要，惟財物或採購亦得參照辦理，爰於第三項明定。
+> 釋：一、第三項移列第五項，並將「前二項」文字配合修正為「第一項及第二項」。二、增訂第三項，以作為中央或地方政府成立工程施工查核小組，定期查核所屬（轄）工程品質及進度之依據。三、增訂第四項，授權主管機關擬訂工程施工查核小組之組織準則，報院核定發布之，其作業辦法由主管機關訂定。
 
 * 71 機關辦理工程、財物採購，應限期辦理驗收，並得辦理部分驗收。驗收時應由機關首長或其授權人員指派適當人員主驗，通知接管單位或使用單位會驗。機關承辦採購單位之人員不得為所辦採購之主驗人或樣品及材料之檢驗人。前三項之規定，於勞務採購準用之。
 
@@ -290,25 +290,25 @@
 
 > 釋：一、參照稽察條例第二十五條之規定。二、結算驗收證明書為結案付款之依據，爰予明文規定，以利遵行。
 
-* 74 廠商與機關間關於招標、審標、決標、履約或驗收之爭議，得依本章規定提出異議及申訴。但得標廠商與機關間之私法爭議，已提付仲裁、申（聲）請調解或提起民事訴訟者，不在此限。
+* 74 廠商與機關間關於招標、審標、決標之爭議，得依本章規定提出異議及申訴。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、政府採購行為一向被認定為「私經濟行為」，故已有契約關係之履約或驗收爭議應循民事爭訟途徑解決，使救濟制度單純化；且本法設有調解制度，已足可提供救濟管道。本條原規定履約或驗收之私法爭議，得由得標廠商自由選擇適用申訴程序或仲裁、起訴，將造成救濟體系積極衝突，實有不宜。爰予刪除。二、關於履約或驗收爭議得提出異議、申訴規定及第八十三條視同調解方案規定既經刪除，本條但書已無實益。爰移列於第八十五條之一第一項規範之。
 
-* 75 廠商對於機關辦理採購，認為違反法令或我國所締結之條約、協定（以下合稱法令），致損害其權利或利益者，得於下列期限內，以書面向招標機關提出異議：一、對招標文件規定提出異議者，為自公告日或邀標日起等標期之四分之一，其尾數不足一日者，以一日計。但不得少於十日。二、對招標文件規定之釋疑、後續說明、變更或補充提出異議者，為接獲機關通知或機關公告日起十日。三、對採購之過程、結果提出異議者，為接獲機關通知或機關公告日起十日。其過程或結果未經通知或公告者，為知悉或可得而知悉之日起十日，但屬招標、審標、決標事項者，至遲不得逾決標日起十五日。招標機關應自收受異議之日起二十日內為適當之處理，並將處理結果以書面通知提出異議之廠商。其處理結果涉及變更或補充招標文件內容者，除選擇性招標之規格標與價格標及限制性招標應以書面通知各廠商外，應另行公告，並視需要延長等標期。
+* 75 廠商對於機關辦理採購，認為違反法令或我國所締結之條約、協定（以下合稱法令），致損害其權利或利益者，得於下列期限內，以書面向招標機關提出異議：一、對招標文件規定提出異議者，為自公告或邀標之次日起等標期之四分之一，其尾數不足一日者，以一日計。但不得少於十日。二、對招標文件規定之釋疑、後續說明、變更或補充提出異議者，為接獲機關通知或機關公告之次日起十日。三、對採購之過程、結果提出異議者，為接獲機關通知或機關公告之次日起十日。其過程或結果未經通知或公告者，為知悉或可得而知悉之次日起十日。但至遲不得逾決標日之次日起十五日。招標機關應自收受異議之次日起十五日內為適當之處理，並將處理結果以書面通知提出異議之廠商。其處理結果涉及變更或補充招標文件內容者，除選擇性招標之規格標與價格標及限制性招標應以書面通知各廠商外，應另行公告，並視需要延長等標期。
 
-> 釋：一、為因應加入世界貿易組織後，我國採購市場國際化之情勢，除了廠商認為招標機關之規定或處理程序違反本法者，得以提出異議外，對於本法未及規範，而我國所締結之條約或協定中另有規定，如招標機關違反其規定，廠商亦得提起異議，以增加廠商權益之保護，爰於第一項予以明定，並依提出異議之事由，分款規定廠商提出異議之期限，俾茲明確。二、第二項規定機關處理廠商異議之期限及相關程序。
+> 釋：一、配合行政程序法第四十八條第二項規定，第一項各款及第二項文字酌作修正，明定異議及機關處理期間之計算，始日不算入。二、第一項第三款配合第七十四條履約或驗收爭議規定之刪除、文字酌予修正。三、為避免招標機關延宕異議處理，使廠商異議儘速獲有結果，第二項機關處理異議期間由二十日減為十五日，俾使廠商不服機關之異議處理結果得儘速提出申訴，以符合世界貿易組織政府採購協定「快速有效程序」要求。
 
-* 76 廠商對於公告金額以上採購異議之處理結果不服，或招標機關逾前條第二項所定期限不為處理者，得於收受異議處理結果或期限屆滿之日起十五日內，依其屬中央機關或地方機關辦理之採購，以書面分別向主管機關、直轄市或縣（市）政府所設之採購申訴審議委員會申訴。地方政府未設採購申訴審議委員會者，得委請中央主管機關處理。
+* 76 廠商對於公告金額以上採購異議之處理結果不服，或招標機關逾前條第二項所定期限不為處理者，得於收受異議處理結果或期限屆滿之次日起十五日內，依其屬中央機關或地方機關辦理之採購，以書面分別向主管機關、直轄市或縣（市）政府所設之採購申訴審議委員會申訴。地方政府未設採購申訴審議委員會者，得委請中央主管機關處理。廠商誤向該管採購申訴審議委員會以外之機關申訴者，以該機關收受之日，視為提起申訴之日。前項收受申訴書之機關應於收受之次日起三日內，將申訴書移送於該管採購申訴審議委員會，並通知申訴廠商。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、配合行政程序法第四十八條第二項規定，第一項文字酌作修正，明定申訴期間之計算，始日不算入。二、參酌訴願法第十四條第四項規定，如廠商誤向該管採購申訴審議委員會以外之機關表明不服者，以該機關收受之日，視為提起申訴之日，爰增訂第二項。三、為使申訴案件儘速獲得處理，明定採購申訴審議委員會以外之機關收受申訴書，應於三日內移送於採購申訴審議委員會，並通知申訴廠商，爰增訂第三項。
 
 * 77 申訴應具申訴書，載明下列事項，由申訴廠商簽名或蓋章：一、申訴廠商之名稱、地址、電話及負責人之姓名、性別、出生年月日、住所或居所。二、原受理異議之機關。三、申訴之事實及理由。四、證據。五、年、月、日。申訴得委任代理人為之，代理人應檢附委任書並載明其姓名、性別、出生年月日、職業、電話、住所或居所。民事訴訟法第七十條規定，於前項情形準用之。
 
 > 釋：一、第一項明定申訴書所應載明事項。二、第二項明定委任代理人提出申訴者，應檢附委任書，並明定委任書所應載明事項。
 
-* 78 廠商提出申訴，應同時繕具副本送招標機關。機關應自收受申訴書副本之日起十日內，以書面向該管採購申訴審議委員會陳述意見。採購申訴審議委員會應於收受申訴書之日起四十日內完成審議，並將判斷以書面通知廠商及機關。必要時，關於招標、審標、決標之申訴審議，得延長四十日，關於履約、驗收之申訴審議，得延長三個月。
+* 78 廠商提出申訴，應同時繕具副本送招標機關。機關應自收受申訴書副本之次日起十日內，以書面向該管採購申訴審議委員會陳述意見。採購申訴審議委員會應於收受申訴書之次日起四十日內完成審議，並將判斷以書面通知廠商及機關。必要時得延長四十日。
 
-> 釋：一、第一項規定廠商提出申訴應副知招標機關，招標機關則應自收受申訴書副本之次日起十日內，以書面向採購申訴審議委員會陳述意見，以利該委員會迅速審議。二、第二項規定採購申訴審議委員會完成審議之期限。
+> 釋：一、配合行政程序法第四十八條第二項規定，第一項文字酌作修正，明定機關陳述意見期間之計算，始日不算入。二、現行條文第七十四條關於履約或驗收爭議得提出異議及申訴之規定既經刪除，第二項規定，爰配合一併修正。
 
 * 79 申訴逾越法定期間或不合法定程式者，不予受理。但其情形可以補正者，應定期間命其補正；逾期不補正者，不予受理。
 
@@ -326,29 +326,45 @@
 
 > 釋：一、第一項明定採購申訴審議委員會審議結果應指明招標機關有無違法之處，若有，並得為處理之建議。二、第二項明定採購申訴審議委員會完成審議前，得視需要先行通知招標機關暫緩採購作業，以免可能之違法情事更形惡化或影響公共利益、相關廠商利益等。三、第三項明定採購申訴審議委員會為處理之建議或暫緩採購作業之通知時，應一併考量之事項，俾利該委員會有所遵循。
 
-* 83 審議判斷依其性質，得視同訴願決定或調解方案，並附記爭訟或異議之期限。民事訴訟法第四百十七條及第四百十八條之規定，於前項後段情形準用之。審議判斷漏未附記或附記錯誤者，第一項爭訟或異議之期限，延長為一年。
+* 83 審議判斷，視同訴願決定。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、第七十四條既已修正有關申訴之情形，不包括履約或驗收之爭議，則可使審議判斷賦予單一效力，使其視同訴願決定，爰刪除視同調解方案規定，使相關救濟程序較為明確、單純可行。另有關之附記，於訴願法第九十條第九十二條已有完整及詳細之規定，故予刪除。二、第一項後段既經刪除，第二、三項已無規定必要，爰予刪除。
 
 * 84 廠商提出異議或申訴者，招標機關評估其事由，認其異議或申訴有理由者，應自行撤銷、變更原處理結果，或暫停採購程序之進行。但為應緊急情況或公共利益之必要，或其事由無影響採購之虞者，不在此限。依廠商之申訴，而為前項之處理者，招標機關應將其結果即時通知該管採購申訴審議委員會。
 
 > 釋：一、明定招標機關於廠商提出異議或申訴後，所應採取之必要措施，俾使招標機關能及早改正或取消違法之採購行為，並避免造成政府損失之擴大，或使可能之違法情事更形惡化。但遇有特殊情形或異議、申訴無理由等情形，則不在此限。二、廠商提出申訴後，申訴案件已在採購申訴審議委員會處理中，機關如因廠商申訴而採取第一項之對應處理措施，自宜通知採購申訴審議委員會，以利該委員會處理參考。
 
-* 85 審議判斷指明原採購行為違反法令者，招標機關應另為適法之處置。招標機關不依採購申訴審議委員會之建議辦理者，應報請上級機關核定，並由上級機關以書面向採購申訴審議委員會及廠商說明理由。第一項情形，廠商得向招標機關請求償付其準備投標、異議及申訴所支出之必要費用。
+* 85 審議判斷指明原採購行為違反法令者，招標機關應另為適法之處置。採購申訴審議委員會於審議判斷中建議招標機關處置方式，而招標機關不依建議辦理者，應於收受判斷之次日起十五日內報請上級機關核定，並由上級機關於收受之次日起十五日內，以書面向採購申訴審議委員會及廠商說明理由。第一項情形，廠商得向招標機關請求償付其準備投標、異議及申訴所支出之必要費用。
 
-> 釋：一、第一項明定申訴處理結果，經採購申訴審議委員會指明原採購行為違反我國所締結之條約、協定或本法者，招標機關應另為適法之處置，以改正違失之處。二、第二項明定招標機關若基於特殊之考量，而無法依第六十四條第一項採購申訴審議委員會之建議辦理者，應以書面向採購申訴審議委員會及申訴廠商說明理由。三、第三項明定申訴經認定招標機關有違失情事，而其無法改正時，廠商得向其為金錢求償之範圍。此係參照「政府採購協定」第二十條關於申訴程序應有就廠商所受損失或損害予以償付之機制，並得將償付限定於準備投標或申訴之成本之規定訂定。
+> 釋：一、依第八十二條第一項規定：「採購申訴審議委員會審議判斷．．．指明招標機關原採購行為有無違反法令之處；其有違反者，並得建議招標機關處置之方式」，惟未規範招標機關不依建議辦理之處理期限，爰於第二項明定之。
 
-* 86 主管機關及直轄市、縣（市）政府為處理中央及地方機關採購之廠商申訴，分別設採購申訴審議委員會；置委員七人至十五人，由主管機關及直轄市、縣（市）政府聘請具有法律或採購相關專門知識之公正人士擔任，其中二人並得由主管機關及直轄市、縣（市）政府高級人員派兼之。採購申訴審議委員會應公正行使職權。採購申訴審議委員會之組織準則，由主管機關擬訂，報請行政院核定後發布之。
+* 85.1 機關與廠商因履約爭議未能達成協議者，得以下列方式之一處理：一、向採購申訴審議委員會申請調解。二、向仲裁機構提付仲裁。前項調解屬廠商申請者，機關不得拒絕。採購申訴審議委員會辦理調解之程序及其效力，除本法有特別規定者外，準用民事訴訟法有關調解之規定。履約爭議調解規則，由主管機關擬訂，報請行政院核定後發布之。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、本條新增。二、第六十九條之調解與第六章之異議申訴，同為本法之爭議解決機制，應同置於第六章，故將本條及新增訂之調解條文列於第八十五條之後，第八十六條之前。三、第一項照朝野協商結論修正。四、原條文第一項末段修正移列為第二項，並作文字修正。五、原條文第二項移列第三項。有關調解之程序及效力，仍以本法為主要依據，如本法無特別規定，方準用民事訴訟法相關規定，故文字並酌予修正。六、增訂第四項，明定履約爭議調解規則授權由主管機關擬訂，報請行政院核定後發布。
 
-* 87 意圖使廠商不為投標、違反其本意投標，或使得標廠商放棄得標、得標後轉包或分包，而施強暴、脅迫、藥劑或催眠術者，處一年以上七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。犯前項之罪，因而致人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上十年以下有期徒刑，各得併科新臺幣三百萬元以下罰金。以詐術或其他非法之方法，使廠商無法投標或開標發生不正確結果者，處五年以下有期徒刑，得併科新臺幣一百萬元以下罰金。意圖影響決標價格或獲取不當利益，而以契約、協議或其他方式之合意，使廠商不為投標或不為價格之競爭者，處六月以上五年以下有期徒刑，得併科新臺幣一百萬元以下罰金。第一項、第三項及第四項之未遂犯罰之。
+* 85.2 申請調解，應繳納調解費、鑑定費及其他必要之費用；其收費標準、繳納方式及數額之負擔，由主管機關定之。
 
-> 釋：一、第一項明定強制圍標之處罰，即以強暴、脅迫強制廠商違反其意志不為投標或為違反本意之投標，應予處罰。二、第二項明定以契約、協議或其他方式之合意圍標之處罰，此等情節雖比第一項輕，然亦嚴重影響政府採購行為，故亦應予處罰。三、除前二項之圍標型態外，尚有以詐術、藥劑、催眠術或其他不法之方法妨礙廠商使不能投標者，爰於第三項明定處罰之。四、因第一項行為而生加重結果者，依所生結果加重其處罰。五、第一項至第三項均嚴重影響政府採購行為，違法情事重大，故其未遂犯亦均罰之。
+> 釋：一、本條新增。二、調解性質與仲裁、訴訟相似，後二者均有收費規定，基於使用者付費之原則，採購申訴審議委員會辦理調解應得收取費用，而此限制人民權利之事項應以法律定之，故增訂本條文。三、有關調解費等費用之收取標準、繳納方式及分擔標準，授權主管機關擬訂收費辦法。
 
-* 88 受機關委託提供採購規劃、設計或專案管理或代辦採購廠商之人員，意圖為私人不法之利益，對技術、工法、材料或設備之招標規範，為不當之限制，因而獲得利益者，處一年以上七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。其意圖為私人不法之利益，對投標廠商之資格為不當之限制，因而獲得利益者，亦同。前項之未遂犯罰之。
+* 85.3 調解經當事人合意而成立；當事人不能合意者，調解不成立。調解過程中，調解委員得依職權以採購申訴審議委員會名義提出書面調解建議；機關不同意該建議者，應先報請上級機關核定，並以書面向採購申訴審議委員會及廠商說明理由。
 
-> 釋：一、明定受託辦理規劃、設計或專案管理業務或受委託代辦採購業務之廠商惡意綁標之處罰。二、本條所規範之對象包括：（一）受政府委託，提供規劃、設計勞務之人員（二）第三十九條所定受委託辦理專案管理之人員及（三）第五條第一項受託代辦採購業務之人員。三、受託辦理規劃、設計或專案管理業務或受委託代辦採購業務之廠商，若因職務之便，對採購案件之技術、工法、材料或設備之招標規範或投標廠商之資格加以不當之限制，以謀取私人之不法利益者，此等行徑不僅嚴重&#26037;傷正當廠商之商機，亦使得在此不公平競爭之市場下，不肖廠商哄抬標價，造成公帑不必要之浪費，甚至衍生經費的追加、工期的延宕、品質不良等弊病；為有效遏阻此等不法行為，提升政府施政之績效與形象，有必要對此惡意之綁標行為明文處罰之。四、辦理採購之公務員若涉及綁標行為，因「刑法」及「貪污治罪條例」中已有規定，本法不另予規定。
+> 釋：一、本條新增。二、第一項明定調解成立、不成立之要件。三、第二項明定調解過程中，除第一項結果外，調解委員為促成爭議之解決，得斟酌情況，提出調解建議。亦即以提出建議之方式，促機關以該建議為據，完成行政報核程序，俾其儘速決定是否接受該建議，並據以決定是否合意成立調解。四、基於政府採購具公共利益性質，為避免調解程序進行後，機關又任意拒絕調解結果，造成雙方時程及資源之浪費，延宕爭議之解決，故於第二項後段規定機關不同意調解建議者，應先報經其上級機關核准，並向採購申訴審議委員會及廠商敘明理由。
+
+* 85.4 履約爭議之調解，當事人不能合意但已甚接近者，採購申訴審議委員會應斟酌一切情形，並徵詢調解委員之意見，求兩造利益之平衡，於不違反兩造當事人之主要意思範圍內，以職權提出調解方案。當事人或參加調解之利害關係人對於前項方案，得於送達之次日起十日內，向採購申訴審議委員會提出異議。於前項期間內提出異議者，視為調解不成立；其未於前項期間內提出異議者，視為已依該方案調解成立。機關依前項規定提出異議者，準用前條第二項之規定。
+
+> 釋：一、本條新增。二、第一項準用民事訴訟法第四百十七條之規定，明定履約之爭議，採購申訴審議委員會得依職權提出調解方案。三、第二項及第三項準用民事訴訟法第四百十八條之規定，明定對調解方案之異議及調解成立之擬制。四、第四項規定機關對調解方案提出異議者，準用第八十五條之三第二項之規定。
+
+* 86 主管機關及直轄市、縣（市）政府為處理中央及地方機關採購之廠商申訴及機關與廠商間之履約爭議調解，分別設採購申訴審議委員會；置委員七人至二十五人，由主管機關及直轄市、縣（市）政府聘請具有法律或採購相關專門知識之公正人士擔任，其中三人並得由主管機關及直轄市、縣（市）政府高級人員派兼之。但派兼人數不得超過全體委員人數五分之一。採購申訴審議委員會應公正行使職權。採購申訴審議委員會組織準則，由主管機關擬訂，報請行政院核定後發布之。
+
+> 釋：一、配合規定增列機關與廠商間之履約爭議調解一項。另為使申訴及調解案件儘速獲得處理，委員名額應更具彈性，爰加以修正之。二、「採購申訴審議委員會組織準則」為現行法規名稱，第二項爰配合酌作修正。
+
+* 87 意圖使廠商不為投標、違反其本意投標，或使得標廠商放棄得標、得標後轉包或分包，而施強暴、脅迫、藥劑或催眠術者，處一年以上七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。犯前項之罪，因而致人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上十年以下有期徒刑，各得併科新臺幣三百萬元以下罰金。以詐術或其他非法之方法，使廠商無法投標或開標發生不正確結果者，處五年以下有期徒刑，得併科新臺幣一百萬元以下罰金。意圖影響決標價格或獲取不當利益，而以契約、協議或其他方式之合意，使廠商不為投標或不為價格之競爭者，處六月以上五年以下有期徒刑，得併科新臺幣一百萬元以下罰金。意圖影響採購結果或獲取不當利益，而借用他人名義或證件投標者，處三年以下有期徒刑，得併科新臺幣一百萬元以下罰金。容許他人借用本人名義或證件參加投標者，亦同。第一項、第三項及第四項之未遂犯罰之。
+
+> 釋：一、增訂第五項，以處罰借用他人名義或證件投標及容許他人借用本人名義或證件參加投標之行為人。二、原條文第五項移列第六項。
+
+* 88 受機關委託提供採購規劃、設計、審查、監造、專案管理或代辦採購廠商之人員，意圖為私人不法之利益，對技術、工法、材料、設備或規格，為違反法令之限制或審查，因而獲得利益者，處一年以上七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。其意圖為私人不法之利益，對廠商或分包廠商之資格為違反法令之限制或審查，因而獲得利益者，亦同。前項之未遂犯罰之。
+
+> 釋：第一項擴大適用對象至審查、監造之人員，擴大適用範圍至規格，且不限招標階段之綁標行為。履約階段對廠商履約事項為違反法令之限制或審查，亦一併適用。
 
 * 89 受機關委託提供採購規劃、設計或專案管理或代辦採購廠商之人員，意圖為私人不法之利益，洩漏或交付關於採購應秘密之文書、圖畫、消息、物品或其他資訊，因而獲得利益者，處五年以下有期徒刑、拘役或科或併科新臺幣一百萬元以下罰金。前項之未遂犯罰之。
 
@@ -370,25 +386,29 @@
 
 > 釋：第一項明定各機關具有共通需求特性之財物及勞務，得以統一招標訂約，分散使用之方式辦理，以增進採購效率，減少採購人力，降低採購成本。
 
+* 93.1 機關辦理採購，得以電子化方式為之，其電子化資料並視同正式文件，得免另備書面文件。前項以電子化方式採購之招標、領標、投標、開標、決標及費用收支作業辦法，由主管機關定之。
+
+> 釋：一、本條新增。二、電子商務是全球趨勢，政府採購作業亦應配合時代發展，以提升採購效率，爰於第一項增列電子採購作業規定，並於第二項授權主管機關訂定相關辦法。
+
 * 94 機關辦理評選，應成立五人至十七人評選委員會，專家學者人數不得少於三分之一，其名單由主管機關會同教育部、考選部及其他相關機關建議之。評選委員會組織準則及審議規則，由主管機關定之。
 
 > 釋：照黨團協商條文通過。
 
-* 95 機關辦理採購宜由採購專業人才為之，其辦法由行政院會同考試院定之。
+* 95 機關辦理採購宜由採購專業人員為之。前項採購專業人員之資格、考試、訓練、發證及管理辦法，由主管機關會同相關機關定之。
 
-> 釋：考量政府採購專業化及人才長期培養之需，爰訂定本條。
+> 釋：一、第一項「人才」修正為「人員」。二、增訂第二項，明定採購專業人員之資格、考試、訓練、發證及管理辦法，由主管機關會同相關機關定之。
 
 * 96 機關得於招標文件中，規定優先採購取得政府認可之環境保護標章使用許可，而其效能相同或相似之產品，並得允許百分之十以上之價差。產品或其原料之製造、使用過程及廢棄物處理，符合再生材質、可回收、低污染或省能源者，亦同。其他增加社會利益或減少社會成本，而效能相同或相似之產品，準用前項之規定。前二項產品之種類、範圍及實施辦法，由主管機關會同行政院環境保護署及相關目的事業主管機關定之。
 
 > 釋：照黨團協商條文通過。
 
-* 97 主管機關得參酌相關法令規定採取措施，扶助中小企業承包或分包一定金額比例以上之政府採購。
+* 97 主管機關得參酌相關法令規定採取措施，扶助中小企業承包或分包一定金額比例以上之政府採購。前項扶助辦法，由主管機關定之。
 
-> 釋：透過政府採購案件，扶助中小企業之發展，為先進國家廣泛採取之措施。鑑於「中小企業發展條例」第三十七條規定，各機關應協助中小企業取得業務機會，爰明定主管機關得採取相關配合措施，以利中小企業之生存與發展。
+> 釋：增訂第二項，主管機關已於本法施行前訂頒扶助中小企業參與政府採購辦法，爰明定授權依據，以符合行政程序法第一百五十條規定。
 
-* 98 得標廠商其於國內員工總人數逾一百人者，應於履約期間僱用殘障人士及原住民，人數不得低於總人數百分之二，僱用不足者，應繳納代金。
+* 98 得標廠商其於國內員工總人數逾一百人者，應於履約期間僱用身心障礙者及原住民，人數不得低於總人數百分之二，僱用不足者，除應繳納代金，並不得僱用外籍勞工取代僱用不足額部分。
 
-> 釋：政府為資源之重要分配者，尤其採購動輒上千億金額，理應對弱勢團體有所保障，正如美國的肯定行動計畫（Affirmative Action），規定凡意欲參加聯邦政府採購招標之企業，須合乎不歧視並承諾對少數民族、婦女或弱勢團體有一定僱用比例，爰訂定本條。
+> 釋：一、第二句中「殘障人士」修正為「身心障礙者」。二、限制其僱用不足額部分不允許僱用外勞取代，保障本國勞工權益。
 
 * 99 機關辦理政府規劃或核准之交通、能源、環保、旅遊等建設，經目的事業主管機關核准開放廠商投資興建、營運者，其甄選投資廠商之程序，除其他法律另有規定者外，適用本法之規定。
 
@@ -398,17 +418,17 @@
 
 > 釋：照黨團協商條文通過。
 
-* 101 機關辦理採購，發現廠商有下列情形之一，應將其事實及理由通知廠商，並附記如未提出異議者，將刊登政府採購公報：一、容許他人借用本人名義或證件參加投標者。二、冒用他人名義或證件，或以偽造、變造之文件參加投標者。三、擅自減省工料情節重大者。四、偽造、變造投標、契約或履約相關文件，經查明屬實者。五、受停業處分期間仍參加投標者。六、犯第八十七條至第九十二條之罪，經第一審有罪判決而未宣告緩刑者。七、得標後無正當理由而不訂約或不履行契約者。八、因可歸責於廠商之事由，致解除或終止契約者。九、查驗或驗收不合格，且未於通知期限內異議、申訴、起訴或依規定辦理者。十、違反第六十五條之規定轉包者。十一、因可歸責於廠商之事由，致延誤履約期限，情節重大者。十二、重整或破產程序中之廠商。十三、歧視婦女、原住民或弱勢團體人士，情節重大者。
+* 101 機關辦理採購，發現廠商有下列情形之一，應將其事實及理由通知廠商，並附記如未提出異議者，將刊登政府採購公報：一、容許他人借用本人名義或證件參加投標者。二、借用或冒用他人名義或證件，或以偽造、變造之文件參加投標、訂約或履約者。三、擅自減省工料情節重大者。四、偽造、變造投標、契約或履約相關文件者。五、受停業處分期間仍參加投標者。六、犯第八十七條至第九十二條之罪，經第一審為有罪判決者。七、得標後無正當理由而不訂約者。八、查驗或驗收不合格，情節重大者。九、驗收後不履行保固責任者。十、因可歸責於廠商之事由，致延誤履約期限，情節重大者。十一、違反第六十五條之規定轉包者。十二、因可歸責於廠商之事由，致解除或終止契約者。十三、破產程序中之廠商。十四、歧視婦女、原住民或弱勢團體人士，情節重大者。廠商之履約連帶保證廠商經機關通知履行連帶保證責任者，適用前項之規定。
 
-> 釋：明定對於廠商有違法或重大違約情形，機關應將其情形通知廠商，並經異議及申訴之處理程序後，視其結果刊登於政府採購公報，以作為各機關辦理其他採購案時，於招標文件規定該等廠商不得參加投標、作為決標對象或分包廠商等選擇締結契約之依據，以杜不良廠商之違法、違約行為，避免其再危害其他機關，並利建立廠商間之良性競爭環境。目前各機關雖有類似措施，但因缺乏立法，成效有限。
+> 釋：一、第一項第二款增列「借用」之情形，以利對借牌者之處置；另增列以偽造、變造之文件訂約或履約之情形，以補不足。二、第一項第四款刪除「經查明屬實」贅字。三、第一項第六款刪除「而本宣告緩刑」等字，以避免與第一百零三條第一項第二款所適用之緩刑條件相衝突。四、第一項第七款刪除「或不履行契約」等字，以避免與原第八款解除或終止契約之情形重複。五、第一項第八款移列第十二款，以配合與前後款次之相關性。六、第一項第九款移列第八款，以配合前後款次之相關性，並將適用情形改為情節重大者。另增訂第九款不履行保固責任之情形。七、第一項第一款移列第十款。八、第一項第十二款及第十三款款次調整為第十三款及第十四款。其中原第十二款並刪除「重整或」文字，以符公司法所設「賦予廠商維持及更生為目的」機制之意旨。
 
-* 102 廠商對於機關依前條所為之通知，認為違反本法或不實者，得於接獲通知之日起二十日內，以書面向該機關提出異議。廠商對前項異議之處理結果不服，或機關逾收受異議之日起二十日期限內不為處理者，無論該當案件是否逾公告金額，得於收受異議處理結果或期限屆滿之日起十五日內，以書面向該管採購申訴審議委員會申訴。機關依前條通知廠商後，廠商未於規定期限內提出異議或申訴，或經提出申訴結果不予受理或審議結果指明不違反本法或並無不實者，機關應即將廠商名稱及相關情形刊登政府採購公報。第一項及第二項關於異議及申訴之處理，準用第六章之規定。
+* 102 廠商對於機關依前條所為之通知，認為違反本法或不實者，得於接獲通知之次日起二十日內，以書面向該機關提出異議。廠商對前項異議之處理結果不服，或機關逾收受異議之次日起十五日內不為處理者，無論該案件是否逾公告金額，得於收受異議處理結果或期限屆滿之次日起十五日內，以書面向該管採購申訴審議委員會申訴。機關依前條通知廠商後，廠商未於規定期限內提出異議或申訴，或經提出申訴結果不予受理或審議結果指明不違反本法或並無不實者，機關應即將廠商名稱及相關情形刊登政府採購公報。第一項及第二項關於異議及申訴之處理，準用第六章之規定。
 
-> 釋：為使有前條各款情形之廠商，於接獲機關之通知後，仍有提出異議、申訴之救濟管道，爰參酌第六章異議及申訴之處理程序，明定廠商得循此程序提出異議及申訴，機關再視其處理結果，決定是否刊登政府採購公報，以免誤刊而損及廠商權益。
+> 釋：第一項及第二項配合行政程序法第四十八條第二項規定，明定異議、機關處理異議及廠商申訴期間之計算，始日不算入，並配合第七十五條之修正，縮短機關處理異議之期限為十五日。
 
-* 103 機關辦理採購，應於招標文件中規定，經依前條第三項規定刊登於政府採購公報之廠商，於下列期間內，不得參加投標或作為決標對象或分包廠商。一、有第一百零一條第一款至第五款情形或第六款判處有期徒刑者，自刊登之日起三年。但於第一百零一條第六款之情形，經判決無罪確定者，應註銷之。二、有第一百零一條第七款至第十三款情形或第六款判處拘役、罰金或緩刑者，自刊登之日起一年。但經重整完成者，應註銷之。機關採購因特殊需要，經上級機關核准者，不適用前項之規定。
+* 103 依前條第三項規定刊登於政府採購公報之廠商，於下列期間內，不得參加投標或作為決標對象或分包廠商。一、有第一百零一條第一款至第五款情形或第六款判處有期徒刑者，自刊登之次日起三年。但經判決撤銷原處分或無罪確定者，應註銷之。二、有第一百零一條第七款至第十四款情形或第六款判處拘役、罰金或緩刑者，自刊登之次日起一年。但經判決撤銷原處分或無罪確定者，應註銷之。機關採購因特殊需要，經上級機關核准者，不適用前項之規定。
 
-> 釋：一、有第八十九條各款情形之廠商，經依前二條之規定處理後，仍被刊登於政府採購公報者，按情節之輕重，於第一項明定各機關於辦理採購時，應於其招標文件中規定該等廠商於一定期間內，不得參加投標或作為決標對象或分包廠商，俾選擇優良廠商作為締結契約之對象。二、基於特殊情形下，機關或有與受拒絕往來之廠商交易之必要，爰於第二項授權經上級機關核准者，不適用第一項之規定，以維採購作業之彈性。所稱特殊情形，譬如該廠商為唯一之供應者，無合適替代對象。
+> 釋：第一項序文關於應於招標文件中規定之條件，鑒於不良廠商業經刊登政府採購公報，自得據以辦理，爰予刪除。第一款及第二款配合可能之訴訟程序，增列判決撤銷原處分或無罪確定應註銷之規定。另第二款配合第一百零一條將「第十三款」修正為「第十四款」。另明定刊登期限，始入不算入。
 
 * 104 軍事機關之採購，應依本法之規定辦理。但武器、彈藥、作戰物資或與國家安全或國防目的有關之採購，而有下列情形者，不在此限。一、因應國家面臨戰爭、戰備動員或發生戰爭者，得不適用本法之規定。二、機密或極機密之採購，得不適用第二十七條、第四十五條及第六十一條之規定。三、確因時效緊急，有危及重大戰備任務之虞者，得不適用第二十六條、第二十八條及第三十六條之規定。四、以議價方式辦理之採購，得不適用第二十六條第三項本文之規定。前項採購之適用範圍及其處理辦法，由主管機關會同國防部定之，並送立法院審議。
 
@@ -450,7 +470,7 @@
 
 > 釋：明定施行細則之訂定機關。
 
-* 114 本法自公布日後一年施行。
+* 114 本法自公布後一年施行。本法修正條文（包括中華民國九十年一月十日修正公布之第七條）自公布日施行。
 
-> 釋：一、明定本法施行日期。二、本法施行日期，宜配合「稽察條例」之修法進行，且本法為政府採購制度之重大變革，尚須加強採購人員之教育訓練及相關準備工作，故明定施行日期授權行政院定之。
+> 釋：一、第二項新增。二、政府採購法第七條業經總統九十年一月十日修正公布。因未訂定施行日期，致生執行疑義，爰增訂第二項規定。
 
