刑事訴訟法 2002.1.17

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -386,9 +386,9 @@
 
 > 釋：一、依第八十七條、第八十八條規定，檢察官有逮捕被告之權，檢察事務官有執行拘提之職權，故於本條增列檢察官、檢察事務官之逕行搜索權。另司法警察調查中逮捕、拘提對象稱犯罪嫌疑人，故增列之。二、合法逮捕後之附帶搜索，除被告身體外，對於放在身旁之手提包，所坐之沙發，所開之車輛等，應納入盤點搜索之範圍。
 
-* 131 有下列情形之一者，檢察官、檢察事務官、司法警察官或司法警察，雖無搜索票，得逕行搜索住宅或其他處所：一、因逮捕被告、犯罪嫌疑人或執行拘提、羈押者。二、因追躡現行犯或逮捕脫逃人者。三、有事實足信為有人在內犯罪而情形急迫者。檢察官於偵查中有相當理由認為情況急迫，非迅速搜索，證據有偽造、變造、湮滅或隱匿之虞者，得逕行搜索，或指揮檢察事務官、司法警察官或司法警察執行搜索。前二項搜索，由檢察官為之者，應於實施後三日內陳報該管法院；由檢察事務官、司法警察官或司法警察為之者，應於執行後三日內報告該管檢察署檢察官及法院。法院認為不應准許者，得於三日內撤銷之。
+* 131 有左列情形之一者，檢察官、檢察事務官、司法警察官或司法警察，雖無搜索票，得逕行搜索住宅或其他處所：一、因逮捕被告、犯罪嫌疑人或執行拘提、羈押，有事實足認被告或犯罪嫌疑人確實在內者。二、因追躡現行犯或逮捕脫逃人，有事實足認現行犯或脫逃人確實在內者。三、有明顯事實足信為有人在內犯罪而情形急迫者。檢察官於偵查中確有相當理由認為情況急迫，非迅速搜索，二十四小時內證據有偽造、變造、湮滅或隱匿之虞者，得逕行搜索，或指揮檢察事務官、司法警察官或司法警察執行搜索，並層報檢察長。前二項搜索，由檢察官為之者，應於實施後三日內陳報該管法院；由檢察事務官、司法警察官或司法警察為之者，應於執行後三日內報告該管檢察署檢察官及法院。法院認為不應准許者，應於五日內撤銷之。第一項、第二項之搜索執行後未陳報該管法院或經法院撤銷者，審判時法院得宣告所扣得之物，不得作為證據。
 
-> 釋：一、依第八十七條、第八十八條規定，檢察官有逮捕被告之權，檢察事務官有執行拘提之職權，故於本條增列檢察官、檢察事務官之徑行搜索權。另司法警察調查中逮捕、拘提對象稱犯罪嫌疑人，故增列之。二、檢察官於偵查中有相當理由認為情況急迫，須迅速搜索，得逕行搜索之，爰增定第二項。三、檢察官執行搜索結果，應讓簽發搜索票之法院知悉，爰增列檢察官指揮或執行搜索後，應函知法院。至於由檢察事務官、司法警察官或司法警察為之者，應報告其管轄之檢察署及法院。
+> 釋：一、對於緊急搜索權，應於確有必要之急迫情形下，且有事實足認犯罪嫌疑人或被告確實在其內，始得為之，以避免濫用緊急搜索權進行不必要的廣泛式、地毯式及與所欲保全法益顯不相當之搜索。爰修正第一項各款。二、偵查中對於證據確有滅失之急迫危險者，檢察官固有緊急搜索權，惟為避免濫用，應限於確有具體事證顯示其情況急迫，在二十四小時內有滅失之立即且明顯危險者，始得緊急搜索。又，為防檢官濫用職權，關於緊急搜索，應層報檢察長。三、對於不應准許之緊急搜索，法院應予撤銷，以維程序正義，爰修正第三項。四、為維程序正義，避免緊急搜索權之濫用，對於執行緊急搜索後拒不陳報該管法院或緊急搜索本即不應准許者，應將所得之證據排除，增列第四項。
 
 * 131.1 搜索，經受搜索人出於自願性同意者，得不使用搜索票。但執行人員應出示證件，並將其同意之意旨記載於筆錄。
 
@@ -474,11 +474,15 @@
 
 * 160 證人之個人意見或推測之詞，不得作為證據。
 
-* 161 檢察官就被告犯罪事實，有舉證責任。
+* 161 檢察官就被告犯罪事實，應負舉證責任，並指出證明之方法。法院於第一次審判期日前，認為檢察官指出之證明方法顯不足認定被告有成立犯罪之可能時，應以裁定定期通知檢察官補正；逾期未補正者，得以裁定駁回起訴。駁回起訴之裁定已確定者，非有第二百六十條各款情形之一，不得對於同一案件再行起訴。違反前項規定，再行起訴者，應諭知不受理之判決。
+
+> 釋：一、鑑於我國刑事訴訟法制之設計係根據無罪推定原則，以檢察官立於當事人之地位，對於被告進行追訴，則檢察官對於被告之犯罪事實，自應負提出證據及說服之實質舉證責任，修正第一項。二、為確實促使檢察官負舉證責任及防止其濫行起訴，基於保障人權之立場，允宜慎重起訴，以免被告遭受不必要之訟累，並節約司法資源，爰設計一中間審查制度之機制，增訂第二項。三、法院於裁定駁回起訴前，既曾賦予檢察官補正證明方法之機會，檢察官若不服該裁定者，亦得提起抗告請求上級法院糾正之，是以檢察官之公訴權能已獲充分保障，此時為維護被告基本人權，避免被告有受二次追訴之危險，增訂第三、四項。
 
 * 162 法院應予當事人、辯護人、代理人或輔佐人，以辯論證據證明力之適當機會。
 
-* 163 法院因發見真實之必要，應依職權調查證據。當事人、辯護人、代理人或輔佐人得請求調查證據，並得於調查證據時，詢問證人、鑑定人或被告。
+* 163 當事人、代理人、辯護人或輔佐人得聲請調查證據，並得於調查證據時，詢問證人、鑑定人或被告。審判長除認為有不當者外，不得禁止之。法院為發見真實，得依職權調查證據。但於公平正義之維護或對被告之利益有重大關係事項，法院應依職權調查之。法院為前項調查證據前，應予當事人、代理人、辯護人或輔佐人陳述意見之機會。
+
+> 釋：一、凡與公平正義之維護或被告利益有重大關係事項，法院仍應依職權調查之。至於如何衡量及其具體範圍則委諸司法實務運作及判例累積形成。爰將本條原第一項，法院因發見真實之必要，「應」修正為「得」，移列為第二項，並增列但書規定。二、又為充分保障當事人、代理人、辯護人或輔佐人於調查證據時之詢問證人、鑑定人或被告之權利，爰於原條文第一項增列後段文字。三、在強化當事人進行色彩後之刑事訴訟架構中，法院依職權調查證據僅具補充性、輔佐性，因此在例外地依職權進行調查證據之情況下，為確保超然、中立之立場，法院於調查證據前，應先給予當事人陳述意見之機會。增列第三項。
 
 * 164 證物應示被告令其辨認，如係文書而被告不解其意義者，應告以要旨。
 
